--- a/war/html/dev/index.html
+++ b/war/html/dev/index.html
@@ -32,7 +32,7 @@
 <script>
 $(function () { SplashScreen.show(); });
 requirejs.config(reqConf);
-requirejs(["ide/selProject","buildAll"],function (){});
+requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
 </script>
 
 </head>
