exportToJSDoit use scriptTag

--- a/war/html/dev/exportToJsdoit.html
+++ b/war/html/dev/exportToJsdoit.html
@@ -15,7 +15,8 @@ requirejs(["exportToJsdoit"],function (){});
 <h1>エクスポート手順 </h1>
 <ul>
 <li><a href="http://jsdo.it/" target="jsd">jsdo.it</a> にログインします．</li>
-<li><a href="http://jsdo.it/hoge1e4/y7Jo" target="tr" >このプロジェクト</a>をForkします．</li>
+<li>「Start Coding」を押して新規コードを作成します。
+<!-- <a href="http://jsdo.it/hoge1e4/y7Jo" target="tr" >このプロジェクト</a>をForkします．--></li>
 <li>(Javascriptタブの内容はそのままにしてください)</li>
 <li>HTMLタブを選び，以下のコードを貼り付けます</li>
 </ul>
