--- a/war/html/dev/index.html
+++ b/war/html/dev/index.html
@@ -57,6 +57,7 @@ requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
 					</li>
 					<li><a href="#" id="login" class="dropdown-toggle" data-toggle="dropdown">ログイン</a>
                         <ul class="dropdown-menu" id="publishMenu">
+                               <!-- //TODO: urlchange! -->
                             <li class="while-logged-out"><a href="../../edit/start-oauth-google">Googleを利用してログイン</a></li>
                             <li class="while-logged-out"><a href="../../edit/start-oauth-twitter">Twitterを利用してログイン</a></li>
                             <li id="syncProjects" class="while-logged-in"><a href="syncProjects.html">プロジェクトの同期...</a></li>
