--- a/war/html/dev/exportToExe.html
+++ b/war/html/dev/exportToExe.html
@@ -19,6 +19,7 @@ requirejs(["exportToExe"],function (){});
 <body>
 	<div class="wait-loggin">ユーザ情報を取得しています</div>
 	<div class="on-logged-out">
+	   <!-- //TODO: urlchange! -->
 		<a href="../../edit/login" target="login">ログイン</a>をしてください
 	</div>
 	<div class="on-logged-in">
