--- a/war/html/dev/project.html
+++ b/war/html/dev/project.html
@@ -108,6 +108,7 @@ requirejs(["ide/editor","buildAll"],function (){});
 			<div id=mainArea class="col-xs-6">
 				<div id=errorPos >
 				</div>
+				<select id="fileSel" style="display:none;"></select>
 				<div id=progs>
 				</div>
 			</div>
