--- a/war/html/dev/index.html
+++ b/war/html/dev/index.html
@@ -55,7 +55,7 @@ requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
 							<li><a href="importFromJsdoit.html">jsdo.itからインポート</a></li>
 						</ul>
 					</li>
-					<li><a href="#" id="login" class="dropdown-toggle" data-toggle="dropdown">ログイン</a>
+					<li id="loginGrp"><a href="#" id="login" class="dropdown-toggle" data-toggle="dropdown">ログイン</a>
                         <ul class="dropdown-menu" id="publishMenu">
                                <!-- //TODO: urlchange! -->
                             <li class="while-logged-out"><a href="../../edit/start-oauth-google">Googleを利用してログイン</a></li>
