--- a/war/html/dev/project.html
+++ b/war/html/dev/project.html
@@ -84,6 +84,7 @@ requirejs(["ide/editor","buildAll"],function (){});
 					</li>
 					<li><a href="#" id="publish" class="dropdown-toggle" data-toggle="dropdown">公開</a>
 						<ul class="dropdown-menu" id="publishMenu">
+                            <li><a href="#" id="mkrun">ランタイム作成</a></li>
                             <li><a href="#" id="exportToExe">tonyuexeで公開する</a></li>
 							<li><a href="#" id="exportToJsdoit">jsdo.itで公開する</a></li>
 						</ul>
