--- a/war/html/dev/project.html
+++ b/war/html/dev/project.html
@@ -25,6 +25,8 @@
 <script src="../../js/lib/jquery.tmpl.js" type="text/javascript"></script>
 <script src="../../js/lib/jquery.hotkeys.js" type="text/javascript"></script>
 <script src="../../js/lib/jquery-ui.js" type="text/javascript"></script>
+<script src="../../js/lib/FileSaver.min.js" type="text/javascript"></script>
+<script src="../../js/lib/jszip.min.js" type="text/javascript"></script>
 
 <script src="../../js/lib/SplashScreen.js"></script>
 <script src="../../js/reqConf.js"></script>
