--- a/war/html/dev/index.html
+++ b/war/html/dev/index.html
@@ -78,8 +78,10 @@ requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
 		<div class="row">
 			<div id=prjViewer class="col-xs-8">
 			<h1>プロジェクト一覧</h1>
-			<button id="newPrj" class="btn btn-primary">新規作成</button>
-            <a href="http://tonyuexe.appspot.com/" target="exe">公開プロジェクト一覧...</a>
+			<!-- button id="newPrj" class="btn btn-primary">新規作成</button-->
+            <span>公開されているプロジェクト→</span>
+            <a href="http://hoge1e3.sakura.ne.jp/tonyu/project/pages/top.cgi" target="exe">プロジェクトボード</a> |
+            <a href="http://tonyuexe.appspot.com/" target="exe">tonyuexe</a>
 				<div id="prjItemList"></div>
 			</div>
 			<div id=wikiViewArea class="col-xs-4">
