--- a/war/html/dev/ui.html
+++ b/war/html/dev/ui.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<meta charset="utf-8">
+    <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Tonyu System 2">
 <meta name="author" content="hoge1e3">
@@ -12,29 +11,18 @@
 
 <!-- Bootstrap core CSS -->
 <link href="../../css/bootstrap.css" rel="stylesheet">
-
 <!-- Custom styles for this template -->
+<!--
 <link href="../../css/tonyu.css" rel="stylesheet">
+-->
 
 <!-- Custom styles for this template -->
 <link href="../../css/jquery-ui.css" rel="stylesheet">
-<link href="../../css/diffview.css" rel="stylesheet">
 
 
 <script src="../../js/lib/jquery-1.10.1.js" type="text/javascript"></script>
-<script src="../../js/lib/jquery.tmpl.js" type="text/javascript"></script>
-<script src="../../js/lib/jquery.hotkeys.js" type="text/javascript"></script>
 <script src="../../js/lib/jquery-ui.js" type="text/javascript"></script>
-<script src="../../js/lib/FileSaver.min.js" type="text/javascript"></script>
-<script src="../../js/lib/jszip.min.js" type="text/javascript"></script>
 
-<script src="../../js/lib/SplashScreen.js"></script>
-<script>
-$(function () { SplashScreen.show(); });
-</script>
-<script src="../../js/lib/ace-noconflict/ace.js" type="text/javascript"></script>
-<!-- script src="../../js/lib/timbre.js" type="text/javascript"></script-->
-<script src="../../js/gen/project_concat.js"></script>
 
 </head>
 <body>
@@ -57,7 +45,6 @@ $(function () { SplashScreen.show(); });
 							<li><a href="#" id="mvFile">名前変更</a></li>
 							<li><a href="#" id="rmFile">削除</a></li>
 							<!--li><a href="#" id="restore">初期状態に戻す</a></li-->
-                            <li><a href="javascript:sh.dlzip();" id="dlzip">プロジェクトをZIPでダウンロード</a></li>
 							<li><a href="#" id="mvPRJ">プロジェクト名を変更</a></li>
 							<li><a href="#" id="rmPRJ">このプロジェクト自身を削除</a></li>
 						</ul>
@@ -70,14 +57,16 @@ $(function () { SplashScreen.show(); });
 						<ul class="dropdown-menu" id="toolMenu">
 							<li><a href="#" id="mapEditor">マップエディタ</a></li>
 							<li><a href="#" id="search">検索</a></li>
+                            <li><a href="#" onclick="sh.window()">Open shell</a></li>
 						</ul>
 					</li>
-					<li><a href="#" id="run" class="dropdown-toggle" data-toggle="dropdown">ウィンドウ</a>
+					<li><a href="#" id="window" class="dropdown-toggle" data-toggle="dropdown">ウィンドウ</a>
 						<ul class="dropdown-menu">
 							<li><a href="#" id="imgResEditor">画像リスト</a></li>
                             <li><a href="#" id="soundResEditor">音声リスト</a></li>
 							<li><a href="#" id="prjOptEditor">プロジェクト オプション</a></li>
 							<li><a href="#" id="editorEditor">エディタの設定</a></li>
+							<li><a href="#" id="openFolder">フォルダを開く</a></li>
 							<li><a href="#" id="runDialog">ダイアログで実行</a></li>
 						</ul>
 					</li>
@@ -90,8 +79,8 @@ $(function () { SplashScreen.show(); });
 					</li>
 					<li><a href="#" id="publish" class="dropdown-toggle" data-toggle="dropdown">ヘルプ</a>
 						<ul class="dropdown-menu" id="helpMenu">
-							<li><a href="#" id="refHelp">この画面でヘルプを見る</a></li>
-                            <li><a href="/doc/index.html" target="helpext">別画面でヘルプを見る</a></li>
+                            <li><a href="#" id="refHelp">この画面でヘルプを見る</a></li>
+                            <li><a href="javascript:window.open('../../doc/index.html','width=800,height=400,menubar=yes,location=yes,resizable=yes,scrollbars=yes,status=yes')" target="helpext">別画面でヘルプを見る</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -108,22 +97,56 @@ $(function () { SplashScreen.show(); });
 			<div id=mainArea class="col-xs-6">
 				<div id=errorPos >
 				</div>
-                <select id="fileSel" style="display:none;"></select>
-				<div id=progs></div>
+				<select id="fileSel" style="display:none;"></select>
+				<div id=progs>
+				</div>
 			</div>
 			<div id=runAreaParent class="col-xs-5">
-				<div id="runArea" style="text-align : center ;" class="runArea">
-					<canvas id="cv" width=400 height=400 style=" margin-left : auto ; margin-right : auto ;"></canvas>
+				<div id="runArea" style="text-align : center ; overflow:none;" class="runArea">
+					<canvas id="cv" width=465 height=465 style=" margin-left : auto ; margin-right : auto ;"></canvas>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- /.container -->
-    <script src="../../js/lib/bootstrap.min.js"></script>
-    <!-- div id="imageList" style="overflow :scroll; width:0px; height:0px;">
-		<img id="baseImg" src="images/base.png"  />
-		<img id="baseImg2" src="images/neko.png"  />
-	</div> -->
+<script src="../../js/lib/bootstrap.min.js"></script>
+
+<script type="text/javascript">
+$(function () {
+    draw();    
+    $("#runArea").dialog({title:"dialog",resize:rsz});
+});
+var rszt;
+function rsz(e,r) {
+    //$("#cv").width( r.size.width);
+    //$("#cv").height( r.size.height);
+    var d=$("#runArea").closest(".ui-dialog");
+    var t=d.find(".ui-dialog-titlebar");
+    var dw=d.width(),dh=d.height(),th=t.height();
+    var pad=30;
+    var sz={w:dw-pad, h:dh-th-pad};
+    if (rszt) clearTimeout(rszt);
+    rszt=setTimeout(function () {
+        $("#runArea").css({width:sz.w,height:sz.h});
+        draw();
+    },1000);
+    $("#runArea").siblings(".ui-dialog-titlebar").text(r.size.width+"x"+r.size.height);
+}
+function draw() {
+    var c=$("#cv");
+    var ctx=c[0].getContext("2d");
+    var w=$("#runArea").width()-10;
+    var h=$("#runArea").height()-10;
+    $("#cv").attr({width:w, height:h});
+    //$("#helloWorld").siblings(".ui-dialog-titlebar").text(w+"x"+h);
+    ctx.fillStyle="red";
+    ctx.fillRect(0,0,w,h);
+    ctx.fillStyle="orange";
+    ctx.fillRect(10,10,w-20,h-20);
+    ctx.fillStyle="cyan";
+    ctx.fillText(w+"x"+h,30,50);
+}
+</script>
 </body>
 </html>
