--- a/war/html/runtimes/index.html
+++ b/war/html/runtimes/index.html
@@ -2,6 +2,8 @@
 <html><head>
 <title>Tonyu System 2</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
 <script src="js/lib/jquery-1.10.1.js" type="text/javascript" data-nocat="true"></script>
 <script src="js/files.js"></script>
 <script src="js/runScript2_concat.js"></script>
