--- a/war/html/dev/index.html
+++ b/war/html/dev/index.html
@@ -30,7 +30,9 @@
 <script>
 $(function () { SplashScreen.show(); });
 requirejs.config(reqConf);
-requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
+requirejs(
+	["ide/selProject","buildAll","wikiExporter"],
+function (){});
 </script>
 
 </head>
@@ -67,7 +69,11 @@ requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
                             <li><a href="#" onclick="sh.window()">Open shell</a></li>
                         </ul>
                     </li>
-
+					<li><a href="#" id="help" class="dropdown-toggle" data-toggle="dropdown">ヘルプ</a>
+                        <ul class="dropdown-menu" id="helpMenu">
+							<li><a href="javascript:window.open('../../doc/index.html','width=800,height=400,menubar=yes,location=yes,resizable=yes,scrollbars=yes,status=yes')" target="helpext">ヘルプ(別ウィンドウ)</a></li>
+                        </ul>
+                    </li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -76,7 +82,7 @@ requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
 
 	<div class="container">
 		<div class="row">
-			<div id=prjViewer class="col-xs-8">
+			<div id=prjViewer class="col-xs-12">
 			<h1>プロジェクト一覧</h1>
 			<!-- button id="newPrj" class="btn btn-primary">新規作成</button-->
             <span>公開されているプロジェクト→</span>
@@ -84,8 +90,8 @@ requirejs(["ide/selProject","buildAll","wikiExporter"],function (){});
             <a href="http://tonyuexe.appspot.com/" target="exe">tonyuexe</a>
 				<div id="prjItemList"></div>
 			</div>
-			<div id=wikiViewArea class="col-xs-4">
-			</div>
+			<!--div id=wikiViewArea class="col-xs-4">
+			</div-->
 		</div>
 	</div>
 
